reduce padding on the search dropdown to prevent jump in padding

--- a/packages/components/header/_header.scss
+++ b/packages/components/header/_header.scss
@@ -174,7 +174,7 @@
       margin-bottom: -20px;
       margin-left: -16px;
       margin-right: -16px;
-      padding-top: 20px;
+      padding-top: 16px;
       text-align: left;
     }
   }
